build: Use <proc> tag rather than compiler argument