@@ -43,9 +43,7 @@
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
-                        <compilerArgs>
-                            <compilerArg>-proc:full</compilerArg>
-                        </compilerArgs>
+                        <proc>full</proc>
                     </configuration>
                 </plugin>
                 <!-- Plugin to compile javadoc -->
